fix error with wrap elements

--- a/src/views/components/input/input.scss
+++ b/src/views/components/input/input.scss
@@ -1,6 +1,19 @@
 @use './colors/input_colors';
 
 
+.profile-change-passwd-input {
+   top: 10px;
+   left: 330px;
+   font-size: large;
+   text-align: right;
+   border: none;
+
+   &:focus {
+      text-align: right;
+   }
+}
+
+
 input {
    display: block;
    position: relative;
